--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    
+    <title> HTML SCIENTIFIC LETTER</title>
   </head>
   <body>
-
+    <h1> Incremental and Decremental Support Vector Machine Learning</h1>
+<hr>
+ <h3>Gert Cauwenberghs </h3>
+ <p>CLSP, ECE Dept</p>
+ <p>Johns Hopkins University</p>
+ <p>Baltimore, MD 21218</p>
+ <em> gert@jhu.edu</em>
   </body>
 </html>
