--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
  <p>Johns Hopkins University</p>
  <p>Baltimore, MD 21218</p>
  <em> gert@jhu.edu</em>
+ <h2>Abstract</h2>
+ <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget velit in arcu finibus consectetur. Maecenas nulla purus, malesuada ac bibendum luctus, suscipit vel nisl. Pellentesque faucibus enim a nibh gravida, vel blandit ex malesuada. In faucibus augue vel nulla varius, in dictum nibh molestie. Aliquam tempus gravida condimentum. Donec at orci gravida, dictum ipsum ac, dignissim urna. Donec lacus ipsum, dignissim sed ante ac, ornare rhoncus lectus. Vestibulum maximus et turpis posuere scelerisque. Vivamus placerat fringilla velit, id dapibus ex convallis ut.</p>
   </body>
+<ol>
+  <li><strong>Introduction</strong></li>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget velit in arcu finibus consectetur. Maecenas nulla purus, malesuada ac bibendum luctus, suscipit vel nisl. Pellentesque faucibus enim a nibh gravida, vel blandit ex malesuada. In faucibus augue vel nulla varius, in dictum nibh molestie. Aliquam tempus gravida condimentum. Donec at orci gravida, dictum ipsum ac, dignissim urna. Donec lacus ipsum, dignissim sed ante ac, ornare rhoncus lectus. Vestibulum maximus et turpis posuere scelerisque. Vivamus placerat fringilla velit, id dapibus ex convallis ut.</p>
+  <li><img src="images/scientific-paper-2.png" alt=""></li>
+</ol>
+<a href="https://en.wikipedia.org/wiki/Support_vector_machine">Go to Wikipedia to know more</a>
 </html>
