--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title> HTML SCIENTIFIC LETTER</title>
+    <title> Scientific Paper</title>
   </head>
   <body>
     <h1> Incremental and Decremental Support Vector Machine Learning</h1>
